--- a/src/View/Board.fxml
+++ b/src/View/Board.fxml
@@ -11,7 +11,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="604.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
    <children>
-      <GridPane layoutY="104.0" prefHeight="501.0" prefWidth="640.0" style="-fx-border-color: 000000;" stylesheets="@application.css">
+      <GridPane fx:id="chessBoard" layoutY="104.0" prefHeight="501.0" prefWidth="640.0" style="-fx-border-color: 000000;">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -33,7 +33,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: 000000;" />
+            <Pane prefHeight="200.0" prefWidth="200.0" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="4" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="7" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
