--- a/src/View/application.css
+++ b/src/View/application.css
@@ -1,12 +1,12 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 
 Button:hover{
-	-fx-background-color:#c96532;
+	-fx-background-color:#2e7d32;
 	
 	
 }
 SplitMenuButton:hover{
-		-fx-background-color:#c96532;
+		-fx-background-color:#2e7d32;
 	
 }
 .list-cell {
@@ -15,11 +15,11 @@ SplitMenuButton:hover{
 }
 
 .list-cell:filled:hover { 
-    -fx-background-color: #c96532; 
+    -fx-background-color: #2e7d32; 
   
 }
 .c:hover{
-	-fx-border-color: #c96532;
+	-fx-border-color: #2e7d32;
 	-fx-border-width: 0px 0px 3px 0px;
 }
 
@@ -36,7 +36,7 @@ SplitMenuButton:hover{
 
 .credits {
     -fx-padding: 0px;
-    -fx-border-color: #C5C5C5;
+    -fx-border-color: #2e7d32;
     -fx-border-insets: 5 0 5 0;
     -fx-border-width:1.0;
 }
@@ -50,7 +50,7 @@ SplitMenuButton:hover{
 }
 
 .menu .label, .menu-item .label {
-    -fx-text-fill: #eee;
+    -fx-text-fill: #2e7d32;
 }
 .menu:hover, .menu:focused, .menu:pressed {
     -fx-background-color: rgba(0, 0, 0, 0.2);
@@ -60,4 +60,22 @@ SplitMenuButton:hover{
 }
 .context-menu {
     -fx-background-color: rgba(0, 0, 0, 0.3);
+}
+
+.data0.chart-pie
+{
+-fx-pie-color: #f5f5f5;
+
+}
+.data1.chart-pie{
+-fx-pie-color: #ffeb3b;
+}
+.data2.chart-pie{
+    -fx-pie-color: #f44336;
+    }
+.chart-title {
+        -fx-text-fill: #2e7d32;
+        -fx-font-size: 1.6em;
+        -fx-font-family: "Times New Roman";
+        -fx-font-weight: bold;
 }
