--- a/src/View/QuestionsManagement.fxml
+++ b/src/View/QuestionsManagement.fxml
@@ -4,35 +4,48 @@
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="875.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.QuestionMangController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.QuestionMangController">
    <children>
-      <TableView fx:id="questionsTable" layoutX="-1.0" layoutY="102.0" prefHeight="570.0" prefWidth="558.0" styleClass="list-cell" stylesheets="@application.css">
+      <TableView fx:id="questionsTable" layoutX="-1.0" layoutY="102.0" prefHeight="568.0" prefWidth="577.0" styleClass="list-cell" stylesheets="@application.css">
         <columns>
-          <TableColumn fx:id="question" prefWidth="463.9999634027481" text="Question" />
-            <TableColumn fx:id="action" prefWidth="96.00009155273438" text="Action" />
+          <TableColumn fx:id="question" prefWidth="461.9100284576416" text="Question" />
+            <TableColumn fx:id="action" prefWidth="100.69403076171875" text="Action" />
         </columns>
       </TableView>
-      <Button fx:id="search" layoutX="294.0" layoutY="59.0" mnemonicParsing="false" onAction="#filterByQuestionLevel" prefHeight="23.0" prefWidth="76.0" stylesheets="@application.css" text="SEARCH">
+      <Button fx:id="search" layoutX="268.0" layoutY="70.0" mnemonicParsing="false" onAction="#filterByQuestionLevel" prefHeight="23.0" prefWidth="76.0" stylesheets="@application.css" text="SEARCH">
          <font>
             <Font name="Times New Roman Bold" size="13.0" />
          </font>
       </Button>
-      <ComboBox fx:id="diffSelect" layoutX="74.0" layoutY="40.0" prefHeight="38.0" prefWidth="182.0" stylesheets="@application.css">
+      <ComboBox fx:id="diffSelect" layoutX="53.0" layoutY="51.0" prefHeight="38.0" prefWidth="182.0" promptText="All Questions" stylesheets="@application.css">
          <styleClass>
             <String fx:value="Feild" />
             <String fx:value="list-cell" />
          </styleClass>
       </ComboBox>
-      <PieChart fx:id="chart" layoutX="560.0" layoutY="100.0" onMouseEntered="#loadChart" prefHeight="424.0" prefWidth="314.0" style="-fx-border-radius: 000000;" stylesheets="@application.css" />
-      <Button fx:id="clearBt" layoutX="399.0" layoutY="59.0" mnemonicParsing="false" onAction="#clear" prefHeight="23.0" prefWidth="76.0" stylesheets="@application.css" text="CLEAR">
+      <PieChart fx:id="chart" layoutX="576.0" layoutY="100.0" onMouseEntered="#loadChart" prefHeight="422.0" prefWidth="298.0" style="-fx-border-radius: 000000;" stylesheets="@application.css" />
+      <Button fx:id="clearBt" layoutX="362.0" layoutY="70.0" mnemonicParsing="false" onAction="#clear" prefHeight="23.0" prefWidth="76.0" stylesheets="@application.css" text="CLEAR">
          <font>
             <Font name="Times New Roman Bold" size="13.0" />
          </font>
       </Button>
+      <Button fx:id="addMoreBt" layoutX="589.0" layoutY="600.0" mnemonicParsing="false" onAction="#addMoreQuestions" prefHeight="23.0" prefWidth="122.0" stylesheets="@application.css" text="ADD QUESTION">
+         <font>
+            <Font name="Times New Roman Bold" size="13.0" />
+         </font>
+      </Button>
+      <Separator layoutY="14.0" prefHeight="23.0" prefWidth="875.0" styleClass="list-cell" stylesheets="@application.css" />
+      <Label layoutX="288.0" prefHeight="25.0" prefWidth="400.0" text=" Q U E S T I O N S   " textAlignment="CENTER" textFill="#1b5e20" textOverrun="CLIP" wrapText="true">
+         <font>
+            <Font name="Times New Roman Bold" size="30.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
