--- a/src/View/MainMenu.fxml
+++ b/src/View/MainMenu.fxml
@@ -1,109 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.Tooltip?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.paint.LinearGradient?>
-<?import javafx.scene.paint.Stop?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="mainpage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="562.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
-   <children>
-      <ImageView fitHeight="645.0" fitWidth="569.0" layoutX="-1.0" pickOnBounds="true" smooth="false">
-         <image>
-            <Image url="@../images/082101-ai.png" />
-         </image>
-      </ImageView>
-      <Button fx:id="loginBt" contentDisplay="CENTER" layoutX="237.0" layoutY="595.0" mnemonicParsing="false" onAction="#startGame" prefHeight="22.0" prefWidth="99.0" style="-fx-background-color: transparent; -fx-border-color: #c39555; -fx-background-radius: 70px;" text="Login">
-         <font>
-            <Font name="Times New Roman Bold Italic" size="14.0" />
-         </font>
-         <textFill>
-            <LinearGradient endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.7647058963775635" green="0.5843137502670288" blue="0.3333333432674408" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </textFill></Button>
-      <PasswordField fx:id="pass" layoutX="164.0" layoutY="532.0" prefHeight="38.0" prefWidth="222.0" promptText="Password" style="-fx-background-color: #ffffff67; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: FFFFFF;">
-         <tooltip>
-            <Tooltip fx:id="passtool" text="Password should be at least 8 characters.">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
+   <center>
+      <HBox alignment="CENTER" prefHeight="339.0" prefWidth="554.0" stylesheets="@application.css" BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="startBt" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#startGame" prefHeight="123.0" prefWidth="138.0" text="Start Game" textAlignment="CENTER" wrapText="true">
+               <HBox.margin>
+                  <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+               </HBox.margin>
                <font>
-                  <Font name="Times New Roman Italic" size="13.0" />
+                  <Font name="Times New Roman Bold" size="22.0" />
                </font>
-            </Tooltip>
-         </tooltip>
-         <font>
-            <Font name="Times New Roman Italic" size="12.0" />
-         </font></PasswordField>
-      <TextField fx:id="userid" layoutX="164.0" layoutY="491.0" prefHeight="37.0" prefWidth="222.0" promptText="UserName" style="-fx-background-color: #ffffff67; -fx-border-width: 0px 0px 2px 0px; -fx-border-color: FFFFFF;">
-         <font>
-            <Font name="Times New Roman Italic" size="12.0" />
-         </font>
-         <tooltip>
-            <Tooltip fx:id="usertool" text="PLease Enter Your UserName">
+            </Button>
+            <Button fx:id="questionBt" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#questionMang" prefHeight="123.0" prefWidth="138.0" text="Manage Questions" textAlignment="CENTER" wrapText="true">
                <font>
-                  <Font name="Times New Roman Italic" size="12.0" />
+                  <Font name="Times New Roman Bold" size="22.0" />
                </font>
-               <graphic>
-                  <ImageView fitHeight="24.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../../../../../key_144px.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-            </Tooltip>
-         </tooltip></TextField>
-      <Button fx:id="signup" layoutX="407.0" layoutY="496.0" mnemonicParsing="false" onAction="#questionMang" prefHeight="17.0" prefWidth="99.0" style="-fx-background-color: transparent; -fx-border-color: #c39555;" text="Sign up">
-         <font>
-            <Font name="Times New Roman Bold Italic" size="14.0" />
-         </font>
-         <textFill>
-            <LinearGradient endX="1.0" endY="1.0">
-               <stops>
-                  <Stop>
-                     <color>
-                        <Color />
-                     </color>
-                  </Stop>
-                  <Stop offset="1.0">
-                     <color>
-                        <Color red="0.7647058963775635" green="0.5843137502670288" blue="0.3333333432674408" />
-                     </color>
-                  </Stop>
-               </stops>
-            </LinearGradient>
-         </textFill>
-      </Button>
-      <Label fx:id="joinus" layoutX="419.0" layoutY="530.0" prefHeight="17.0" prefWidth="86.0" text="Join us NOW!" textFill="#c39555">
-         <font>
-            <Font name="System Italic" size="12.0" />
-         </font>
-      </Label>
-      <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="126.0" layoutY="496.0" pickOnBounds="true">
-         <image>
-            <Image url="@../images/Vector.png" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="27.0" fitWidth="30.0" layoutX="126.0" layoutY="534.0" pickOnBounds="true">
-         <image>
-            <Image url="@../images/key_144px.png" />
-         </image>
-      </ImageView>
-   </children>
-</AnchorPane>
+            </Button>
+            <Button maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="123.0" prefWidth="138.0" text="History" textAlignment="CENTER">
+               <font>
+                  <Font name="Times New Roman Bold" size="22.0" />
+               </font>
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
+   </center>
+</BorderPane>
