showing scores on board + small fix in Game

--- a/src/View/ChessBoard.fxml
+++ b/src/View/ChessBoard.fxml
@@ -12,97 +12,102 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="allBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
-   <top>
-      <HBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="80.0" prefWidth="540.0" BorderPane.alignment="CENTER">
-         <children>
-            <GridPane prefHeight="80.0" prefWidth="473.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Button fx:id="first" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="47.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="1">
-                     <font>
-                        <Font name="Times New Roman Bold" size="19.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="second" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="2" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="Times New Roman Bold" size="19.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="third" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="3" GridPane.columnIndex="2">
-                     <font>
-                        <Font name="Times New Roman Bold" size="19.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="forth" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="4" GridPane.columnIndex="3">
-                     <font>
-                        <Font name="Times New Roman Bold" size="19.0" />
-                     </font>
-                  </Button>
-                  <Text fx:id="time" strokeType="OUTSIDE" strokeWidth="0.0" text="Time" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <font>
-                        <Font name="System Bold" size="20.0" />
-                     </font>
-                  </Text>
-                  <Button cancelButton="true" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" style="-fx-background-color: transparent;" GridPane.rowIndex="2">
-                     <graphic>
-                        <ImageView fitHeight="22.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true" />
-                     </graphic>
-                  </Button>
-               </children>
-            </GridPane>
-         </children>
-         <BorderPane.margin>
-            <Insets bottom="300.0" left="200.0" right="200.0" top="10.0" />
-         </BorderPane.margin>
-      </HBox>
-   </top>
-   <center>
-      <GridPane fx:id="chessBoard" nodeOrientation="LEFT_TO_RIGHT" prefHeight="562.0" prefWidth="870.0" BorderPane.alignment="TOP_CENTER">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-         </children>
-         <BorderPane.margin>
-            <Insets top="-250.0" />
-         </BorderPane.margin>
-      </GridPane>
-   </center>
+<BorderPane fx:id="allBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
+	<top>
+		<HBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="80.0" prefWidth="540.0" BorderPane.alignment="CENTER">
+			<children>
+				<GridPane prefHeight="80.0" prefWidth="473.0">
+					<columnConstraints>
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+						<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+					</columnConstraints>
+					<rowConstraints>
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+						<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+					</rowConstraints>
+					<children>
+						<Button fx:id="first" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="47.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="1">
+							<font>
+								<Font name="Times New Roman Bold" size="19.0" />
+							</font>
+						</Button>
+						<Button fx:id="second" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="2" GridPane.columnIndex="1">
+							<font>
+								<Font name="Times New Roman Bold" size="19.0" />
+							</font>
+						</Button>
+						<Button fx:id="third" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="3" GridPane.columnIndex="2">
+							<font>
+								<Font name="Times New Roman Bold" size="19.0" />
+							</font>
+						</Button>
+						<Button fx:id="forth" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="45.0" prefWidth="100.0" style="-fx-background-color: transparent; -fx-border-radius: 5; -fx-background-radius: 5;" text="4" GridPane.columnIndex="3">
+							<font>
+								<Font name="Times New Roman Bold" size="19.0" />
+							</font>
+						</Button>
+						<Text fx:id="time" strokeType="OUTSIDE" strokeWidth="0.0" text="Time" GridPane.columnIndex="1" GridPane.rowIndex="2">
+							<font>
+								<Font name="System Bold" size="20.0" />
+							</font>
+						</Text>
+						<Text fx:id="score" layoutX="485.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score" wrappingWidth="116.681640625" GridPane.columnIndex="1" GridPane.rowIndex="3">
+							<font>
+								<Font name="System Bold" size="20.0" />
+							</font>
+						</Text>
+						<Button cancelButton="true" mnemonicParsing="false" prefHeight="27.0" prefWidth="50.0" style="-fx-background-color: transparent;" GridPane.rowIndex="2">
+							<graphic>
+								<ImageView fitHeight="22.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true" />
+							</graphic>
+						</Button>
+					</children>
+				</GridPane>
+			</children>
+			<BorderPane.margin>
+				<Insets bottom="300.0" left="200.0" right="200.0" top="10.0" />
+			</BorderPane.margin>
+		</HBox>
+	</top>
+	<center>
+		<GridPane fx:id="chessBoard" nodeOrientation="LEFT_TO_RIGHT" prefHeight="562.0" prefWidth="870.0" BorderPane.alignment="TOP_CENTER">
+			<columnConstraints>
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+			</columnConstraints>
+			<rowConstraints>
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+			</rowConstraints>
+			<children>
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="5" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
+				<Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+			</children>
+			<BorderPane.margin>
+				<Insets top="-250.0" />
+			</BorderPane.margin>
+		</GridPane>
+	</center>
 </BorderPane>
