--- a/src/View/Login.fxml
+++ b/src/View/Login.fxml
@@ -68,7 +68,7 @@
                         <Font name="System Italic" size="13.0" />
                      </font>
                   </Text>
-                  <Button fx:id="signupBt" mnemonicParsing="false" prefHeight="26.0" prefWidth="74.0" styleClass="list-cell" stylesheets="@application.css" text="Sign up">
+                  <Button fx:id="signupBt" mnemonicParsing="false" onAction="#signup" prefHeight="26.0" prefWidth="74.0" styleClass="list-cell" stylesheets="@application.css" text="Sign up">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
