--- a/src/View/ChessBoard.fxml
+++ b/src/View/ChessBoard.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="allBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
+<BorderPane fx:id="allBoard" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.BoardController">
 	<top>
 		<HBox nodeOrientation="LEFT_TO_RIGHT" prefHeight="80.0" prefWidth="540.0" BorderPane.alignment="CENTER">
 			<children>
@@ -50,12 +50,12 @@
 								<Font name="Times New Roman Bold" size="19.0" />
 							</font>
 						</Button>
-						<Text fx:id="time" strokeType="OUTSIDE" strokeWidth="0.0" text="Time" GridPane.columnIndex="1" GridPane.rowIndex="2">
+						<Text fx:id="time" strokeType="OUTSIDE" strokeWidth="0.0" text="Time" GridPane.rowIndex="2">
 							<font>
 								<Font name="System Bold" size="20.0" />
 							</font>
 						</Text>
-						<Text fx:id="score" layoutX="485.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score" wrappingWidth="116.681640625" GridPane.columnIndex="1" GridPane.rowIndex="3">
+						<Text fx:id="score" layoutX="485.0" layoutY="42.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Score" wrappingWidth="116.681640625" GridPane.rowIndex="3">
 							<font>
 								<Font name="System Bold" size="20.0" />
 							</font>
@@ -65,6 +65,11 @@
 								<ImageView fitHeight="22.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true" />
 							</graphic>
 						</Button>
+                  <Text fx:id="playerName" strokeType="OUTSIDE" strokeWidth="0.0" text="PlayerName" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="20.0" />
+                     </font>
+                  </Text>
 					</children>
 				</GridPane>
 			</children>
