--- a/src/View/Login.fxml
+++ b/src/View/Login.fxml
@@ -45,7 +45,7 @@
                <children>
                   <ImageView fitHeight="32.0" fitWidth="28.0" pickOnBounds="true">
                      <image>
-                        <Image url="@../../../../../lock_5dd00px.png" />
+                        <Image url="@../images/lock_5dd00px.png" />
                      </image>
                   </ImageView>
                   <PasswordField fx:id="password" promptText="Password" styleClass="Feild" stylesheets="@application.css">
