--- a/src/View/QuestionPopup.fxml
+++ b/src/View/QuestionPopup.fxml
@@ -13,11 +13,11 @@
    <children>
       <VBox layoutX="34.0" layoutY="183.0" prefHeight="278.0" prefWidth="499.0">
          <children>
-            <RadioButton fx:id="firstAnswer" mnemonicParsing="false" prefHeight="25.0" prefWidth="522.0" text="Answer 1 " wrapText="true" selected="false">
+            <RadioButton fx:id="firstAnswer" mnemonicParsing="false" prefHeight="25.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">
                <font>
                   <Font size="16.0" />
                </font></RadioButton>
-            <RadioButton fx:id="secondAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" text="Answer 1 " wrapText="true" selected="false">>
+            <RadioButton fx:id="secondAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">>
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
@@ -25,7 +25,7 @@
                   <Font size="16.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="thirdAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" text="Answer 1 " wrapText="true" selected="false">>
+            <RadioButton fx:id="thirdAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">>
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
@@ -33,7 +33,7 @@
                   <Font size="16.0" />
                </font>
             </RadioButton>
-            <RadioButton fx:id="forthAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" text="Answer 1 " wrapText="true" selected="false">>
+            <RadioButton fx:id="forthAnswer" mnemonicParsing="false" prefHeight="18.0" prefWidth="522.0" selected="false" text="Answer 1 " wrapText="true">>
                <VBox.margin>
                   <Insets top="50.0" />
                </VBox.margin>
