--- a/src/View/YouWinWindow.fxml
+++ b/src/View/YouWinWindow.fxml
@@ -2,18 +2,27 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.74" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.YouWinCtr">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" opacity="0.7" prefHeight="400.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.YouWinCtr">
    <children>
-      <ImageView fitHeight="300.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="159.0" fitWidth="215.0" layoutX="163.0" layoutY="192.0" pickOnBounds="true" preserveRatio="true" AnchorPane.topAnchor="170.0">
+         <image>
+            <Image url="@../../../../../../Downloads/545-ai.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="400.0" fitWidth="500.0" pickOnBounds="true">
+         <image>
+            <Image url="@../../../../../../Downloads/3506405-ai.png" />
+         </image></ImageView>
       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="500.0">
          <top>
-            <Text fx:id="name" strokeType="OUTSIDE" strokeWidth="0.0" text="Congrats! You Win" textAlignment="CENTER" wrappingWidth="366.13666021823883" BorderPane.alignment="CENTER">
+            <Text fx:id="name" fill="#673ab7" strokeType="OUTSIDE" strokeWidth="0.0" text="Congrats! You Win" textAlignment="CENTER" wrappingWidth="366.13666021823883" BorderPane.alignment="CENTER">
                <font>
                   <Font name="System Bold" size="25.0" />
                </font>
@@ -23,9 +32,9 @@
             </Text>
          </top>
          <center>
-            <Label text="Your Score " BorderPane.alignment="CENTER">
+            <Label text="Your Score " textFill="#673ab7" BorderPane.alignment="CENTER">
                <BorderPane.margin>
-                  <Insets bottom="50.0" top="70.0" />
+                  <Insets top="-50.0" />
                </BorderPane.margin>
                <font>
                   <Font name="System Bold" size="48.0" />
@@ -38,7 +47,7 @@
                   <Font size="34.0" />
                </font>
                <BorderPane.margin>
-                  <Insets bottom="100.0" />
+                  <Insets bottom="50.0" />
                </BorderPane.margin>
             </Text>
          </bottom>
