--- a/src/View/MainMenu.fxml
+++ b/src/View/MainMenu.fxml
@@ -3,11 +3,13 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="870.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.MainMenuController">
    <center>
       <HBox alignment="CENTER" prefHeight="339.0" prefWidth="554.0" stylesheets="@application.css" BorderPane.alignment="CENTER">
          <children>
@@ -33,6 +35,9 @@
                </HBox.margin>
             </Button>
          </children>
+         <BorderPane.margin>
+            <Insets left="-20.0" />
+         </BorderPane.margin>
       </HBox>
    </center>
    <top>
@@ -42,4 +47,18 @@
          </BorderPane.margin>
       </ComboBox>
    </top>
+   <left>
+      <Button fx:id="logoutBt" mnemonicParsing="false" style="-fx-background-color: transparent;"  BorderPane.alignment="TOP_LEFT" onAction="#logout">
+         <graphic>
+            <ImageView fitHeight="31.0" fitWidth="34.0" styleClass="-fx-background-color: white;" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/logOut.png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <BorderPane.margin>
+            <Insets left="10.0" />
+         </BorderPane.margin>
+      </Button>
+   </left>
 </BorderPane>
